--- a/app/src/main/res/layout/activity_form.xml
+++ b/app/src/main/res/layout/activity_form.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#03A9F4"
-    tools:context=".FormActivity">
+    tools:context=".ui.FormActivity">
+
     <TextView
         android:id="@+id/namatext"
         android:layout_width="wrap_content"
