--- a/app/src/main/res/layout/activity_main_second.xml
+++ b/app/src/main/res/layout/activity_main_second.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context=".MainActivitySecond">
+    tools:context=".ui.MainActivitySecond">
 
     <TextView
         android:id="@+id/textView"
